fix: wallet balance shimmer on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -123,6 +123,10 @@
   max-height: 40px !important;
 }
 
+.css-1jn7hrs {
+  display: none !important;
+}
+
 /* .tw-connected-wallet > .css-1d4s0we {
   visibility: hidden !important;
 } */
